[gd_scene load_steps=11 format=3 uid="uid://dfs2bysish47g"]

[ext_resource type="Script" path="res://Enemies/BaseEnemy.gd" id="1_q8lak"]
[ext_resource type="Script" path="res://Enemies/enemy_crash_logic.gd" id="2_50sn7"]
[ext_resource type="Script" path="res://Enemies/EnemyAirBasic/enemy_state_machine.gd" id="2_vsthr"]
[ext_resource type="Script" path="res://Enemies/EnemyAirBasic/enemy_movement.gd" id="3_ci047"]
[ext_resource type="Script" path="res://Enemies/simple_ai_shooter.gd" id="3_r5bv4"]
[ext_resource type="PackedScene" uid="uid://hfms6pa1mh7e" path="res://Enemies/EnemyAirScout/scout.glb" id="6_fwhf6"]
[ext_resource type="Script" path="res://Enemies/EnemyLineOfSight.gd" id="7_s31rp"]
[ext_resource type="PackedScene" uid="uid://c0ccvidlup2vd" path="res://Effects/Particles/EnginePropulsionParticles/EnginePropulsionParticles.tscn" id="7_t7wce"]

[sub_resource type="BoxShape3D" id="BoxShape3D_44aga"]
size = Vector3(2.36426, 0.958424, 2.40039)

[sub_resource type="BoxShape3D" id="BoxShape3D_8qho2"]
size = Vector3(46.8252, 41.6885, 53.9863)

[node name="EnemyAirScout" type="CharacterBody3D" groups=["radar_target"]]
script = ExtResource("1_q8lak")
starting_health = 15.0
enemy_name = "Basic Turret Ship"

[node name="EnemyStallLogic" type="Node" parent="."]
script = ExtResource("2_50sn7")

[node name="EnemyMovement" type="Node" parent="."]
script = ExtResource("3_ci047")
patrol_speed = 8.0
pursuit_speed = 4.0

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("2_vsthr")

[node name="SimpleAIShooter" type="Node" parent="." node_paths=PackedStringArray("bullet_spawn_point")]
script = ExtResource("3_r5bv4")
shoot_delay = 1.0
attack_range = 15.0
bullet_spawn_point = NodePath("../BulletSpawnPoint")

[node name="ShootTimer" type="Timer" parent="SimpleAIShooter"]

[node name="BulletSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(0.998209, -0.059829, 0, 0.059829, 0.998209, 0, 0, 0, 1, 0, 0.512423, -2.65467)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.347562, -0.123596)
shape = SubResource("BoxShape3D_44aga")

[node name="LineOfSight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.19642)
script = ExtResource("7_s31rp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LineOfSight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -26.6946)
shape = SubResource("BoxShape3D_8qho2")

[node name="scout" parent="." instance=ExtResource("6_fwhf6")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="EnginePropulsionParticles" parent="." instance=ExtResource("7_t7wce")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.330113, 0.277164, 0.889306)
jet_radius = 0.2
length_life = 0.2

[node name="EnginePropulsionParticles2" parent="." instance=ExtResource("7_t7wce")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3258, 0.326339, 0.816959)
jet_radius = 0.2
length_life = 0.2
